--- a/platziverse-web/public/index.html
+++ b/platziverse-web/public/index.html
@@ -5,6 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Platziverse</title>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+
+    socket.on('agent/message', function(payload) {
+      console.log(payload)
+    })
+
+    setInterval(function() {
+      socket.emit('agent/message', 'To server')
+    }, 5000)
+  </script>
 </head>
 <body>
   <h1>Platziverse</h1>
