[Web] Integrate agent module with socket.io

--- a/platziverse-web/public/index.html
+++ b/platziverse-web/public/index.html
@@ -10,12 +10,16 @@
     var socket = io();
 
     socket.on('agent/message', function(payload) {
-      console.log(payload)
+      console.log('agent/message', payload)
     })
 
-    setInterval(function() {
-      socket.emit('agent/message', 'To server')
-    }, 5000)
+    socket.on('agent/connected', function(payload) {
+      console.log('agent/connected', payload)
+    })
+
+    socket.on('agent/disconnected', function(payload) {
+      console.log('agent/disconnected', payload)
+    })
   </script>
 </head>
 <body>
